<resources>
    <string name="app_name">Placeur</string>
    <string name="title_activity_login">Placeur</string>

    <!-- Strings related to login -->
    <string name="prompt_nickname">Имя пользователя</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_confirm_password">Пароль ещё раз</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_name">Имя</string>
    <string name="prompt_surname">Фамилия</string>
    <string name="prompt_city">Город</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="action_sign_up">Регистрация</string>
    <string name="action_sign_up_short">Регистрация</string>
    <string name="error_invalid_login">Имя пользователя слишком короткое</string>
    <string name="error_invalid_password">Пароль слишком короткий</string>
    <string name="error_dublicate_password">Пароли не совпадают</string>
    <string name="error_incorrect_password">Неправильный пароль</string>
    <string name="error_field_required">Это поле нужно заполнить</string>
    <string name="permission_rationale">"Разрешения на доступ к контенту необходимы для доработки электронной почты."</string>
    <string name="subtitle">"Поиск заведений быстрого питания"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="cities">
        <item>Самара</item>
    </string-array>
    <string-array name="similarity">
        <item>Косинусная мера</item>
        <item>Евклидово расстояние</item>
        <item>Корреляция Пирсона</item>
        <item>Манхэттенское расстояние</item>
    </string-array>
</resources>
